# plugz

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  awesome-use-cases.md  docker-compose.yml  go.mod  go.sum  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml  docs-site.yml  docs.yml
cmd/skills-demo/: main.go
cmd/skillsd/: main.go
data/: knowledge_base.txt
docs/: architecture.md
docs-site/: Dockerfile  README-conversao.md  astro.config.mjs  docker-compose.yml  package-lock.json  package.json
docs-site/k8s/: deployment.yaml  ingress.yaml  service.yaml
docs-site/src/content/docs/: api-reference.md  architecture.md  deployment.md  getting-started.md  index.mdx
docs-site/src/content/docs/guides/: deployment.md  quickstart.md
docs/stress/: README.md
examples/skills/: echo.json
internal/api/: middleware.go  server.go
internal/executor/: executor.go
internal/orchestrator/: orchestrator.go  orchestrator_test.go
internal/registry/: registry.go
internal/skill/: skill.go
internal/telemetry/: otel.go
internal/watcher/: watcher.go
k8s/: deployment.yaml  ingress.yaml  service.yaml
scripts/: loadtest.go
src/ai_agent_demo/: __init__.py  agents.py  cli.py  rag.py
tests/: api_integration_test.go  e2e_rate_limit_test.go  executor_test.go  registry_test.go  reload_integration_test.go  test_orchestrator.py  test_rag.py
web/: index.html  package-lock.json  package.json
web/src/: main.jsx  styles.css
