[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent-skills-demo"
version = "0.1.0"
description = "Multi-agent orchestration + simple RAG demo"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
ai-agent-demo = "ai_agent_demo.cli:main"
